<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tech.niocoders.com.supportsolutions.signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <!-- FIRST NAME -->
    <!-- ************* -->
    <TextView
        android:id="@+id/fNameText"
        android:layout_width="104dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/first_name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/fNameEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- SECOND NAME -->
    <!-- ************* -->
    <TextView
        android:id="@+id/sNameText"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:text="@string/second_name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameText" />

    <EditText
        android:id="@+id/sNameEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameEditText" />

    <!-- PHONE -->
    <!-- ************* -->
    <TextView
        android:id="@+id/pNumberText"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:paddingRight="40dp"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/pNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sNameText" />

    <EditText
        android:id="@+id/pNumberEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        android:textColor="#FFF"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sNameEditText" />

    <!-- EMAIL -->
    <!-- ************* -->
    <TextView
        android:id="@+id/emailText"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:paddingRight="65dp"
        android:text="@string/emailsignup"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNumberText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        android:textColor="#FFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNumberEditText" />

    <!-- PASSWORD -->
    <!-- ******** -->
    <TextView
        android:id="@+id/passwordText"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:paddingRight="30dp"
        android:text="@string/passwordsignup"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        android:textColor="#FFF"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <!-- GENDER -->
    <!-- ****** -->
    <TextView
        android:id="@+id/genderText"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:paddingRight="50dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/genderSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="197dp"
        android:layout_height="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <!-- TYPES OF CUSTODY -->
    <!-- **************** -->
    <TextView
        android:id="@+id/custodyText"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:paddingRight="40dp"
        android:text="@string/custody"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/custodySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderText" />

    <Spinner
        android:id="@+id/custodySpinner"
        android:layout_width="197dp"
        android:layout_height="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:paddingTop="5dp"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

    <!-- SIGNUP BUTTON -->
    <!-- ************* -->
    <Button
        android:id="@+id/btnsingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btns_background"
        android:text="@string/sign_up"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custodySpinner" />





</android.support.constraint.ConstraintLayout>